--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/JonBabao/Everfall-RPG/issues"
   },
   "homepage": "https://github.com/JonBabao/Everfall-RPG#readme",
   "dependencies": {
-    "discord.js": "^14.18.0"
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
