--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/JonBabao/Everfall-RPG#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7"
   },
